fixed alignments

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
 
 #home-button {
     position: relative;
+    top: 20px;
     background: linear-gradient(to right, #232526, #414345);
 }
 
